# TalentIQ_AI

./: .gitignore  api.py  main.py  pyproject.toml  test_schema.py
frontend/: package-lock.json  package.json
frontend/src/: index.css  main.jsx
frontend/src/components/: CandidateCard.jsx  CandidateDetails.jsx  Header.jsx  JobDescription.jsx  Leaderboard.jsx  LoadingOverlay.jsx  ResumeUpload.jsx
frontend/src/context/: ThemeContext.jsx
frontend/src/data/: dummyData.js
frontend/src/pages/: Home.jsx
frontend/src/services/: api.js
hr/: backend.txt
models/: hr_schema.py  match_schema.py  resume_schema.py
services/: file_reader.py  llm_parser.py  matcher.py  pipeline.py  report_generator.py
